Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-36017

Fatal InnoDB error: Unknown error Temp file write failure

    XMLWordPrintable

Details

    • Can result in hang or crash
    • Q3/2025 Maintenance

    Description

      The last few days one of our 10.11.10 galera clusters is crashing completely with the follow error: [ERROR] [FATAL] InnoDB: Unknown error Temp file write failure

      I've attached the full log.

      Looking at the log it seems to be caused by an OPTIMIZE. The table that is being optimized has about 6.7M rows, about 2M are added and removed each day.

      Attachments

        Issue Links

          Activity

            People

              thiru Thirunarayanan Balathandayuthapani
              rtuk Rick Tuk
              Votes:
              1 Vote for this issue
              Watchers:
              10 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 4.3d Original Estimate - 4.3d
                  4.3d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 5d 7.75h
                  5d 7.75h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.